body overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,9 @@
   
   body {
     margin: 0;
+    width:100%;
     padding: 0;
+    overflow-x: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #1f1f1f;
     color: #fff;
@@ -449,11 +451,11 @@
     nav a {
       text-transform: uppercase;
       letter-spacing: 1px;
-      font-size: 15px;
+      font-size: 14px;
       font-weight: bold;
       color: #fff;
       text-decoration: none;
-      padding: 5px;
+      padding: 4px;
       margin:auto;
       left: -500px;
       position: relative;
@@ -462,8 +464,7 @@
       /* Project Container Styles */
   .project-container {
     background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
-    padding: 20px;
+    padding: 10%;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
     transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
     display: flex;
@@ -481,6 +482,10 @@
     background-color: rgba(255, 255, 255, 0.08);
     margin-top: 100px;
     border-radius: 5px;
+  }
+
+  .github-stats{
+    display: none;
   }
 
   }
@@ -610,12 +615,12 @@
     justify-content: center;
     justify-items: center;
     padding-bottom: 200px;
+    max-width: 80%;
   }
   
   .grid-container p{
     color: #fff;
     opacity: .8;
-    padding-right: 10px;
   }
 
   .grid-container a{
